# h5utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  array  pyproject.toml  requirements.txt  setup.cfg  vulture_whitelist.py
ch5mpy/: __init__.py  _typing.py  attributes.py  dict.py  h5dict.py  list.py  names.py  np.py  read.py  types.py  utils.py  write.py
ch5mpy/array/: array.py  io.py  view.py
ch5mpy/functions/: creation_routines.py  random.py  types.py
ch5mpy/h5array/: array.py  chunks.py  creation_routines.py  h5array.py  inplace.py  io.py  repr.py  subset.py  view.py
ch5mpy/indexing/: __init__.py  base.py  list.py  optimization.py  selection.py  slice.py  special.py  typing.py  utils.py
ch5mpy/io/: __init__.py  read.py  write.py
ch5mpy/objects/: dataset.py  group.py  object.py
ch5mpy/pickle/: wrap.py
ch5mpy/sparse/: coo.py  csr.py
docs/source/: api.rst  conf.py  index.rst  installing.rst  license.rst  overview.rst
h5utils/: __init__.py  _typing.py  h5dict.py  objects.py  write.py
h5utils/h5array/: functions.py  h5array.py  inplace.py  io.py  repr.py  slice.py  subset.py
h5utils/pickle/: wrap.py
stubs/h5py/: __init__.pyi  _objects.pyi  h5d.pyi  h5t.pyi
stubs/h5py/_hl/: __init__.py  (+4 more)
tests/: conftest.py  test_array_creation.py  test_array_repr.py  test_chunked_array.py  test_complex_object_h5array.py  test_compute_shape.py  test_full_slice.py  test_functions.py  test_get_chunks.py  test_h5_list.py  test_h5array.py  test_h5dict.py  test_pickle.py  test_selection.py  test_sparse.py  test_str_h5array.py  test_write.py  write.py
(+24 files in other folders)
