[tool.poetry]
name = "ch5mpy"
version = "0.4"
description = "Collection of helper tools for reading or writing to h5 files using the h5py library."
authors = ["MatteoBouvierVidium <m.bouvier@vidium-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
h5py = "*"
numpy = "*"
tqdm = "*"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = '*'
pre-commit = '*'

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
