[metadata]
name = ch5mpy
version = 0.1.0
description = Collection of helper tools for reading or writing to h5 files using the h5py library.
author = Matteo Bouvier
author_email = m.bouvier@vidium-solutions.com
url = https://github.com/Vidium/ch5mpy

[options]
packages = find:
install_requires =
    numpy
    h5py

[options.packages.find]
exclude=
    tests*
    stubs*

[mypy]
mypy_path = stubs
